<resources>
    <string name="app_name">GeoTravelJournal</string>
    <string name="hint_enter_address">Введите адрес</string>
    <string name="text_search">Поиск</string>
    <string name="text_current_position">Моя позиция</string>
    <string name="search_icon_desc">Найти</string>
    <string name="text_reset_route">Сбросить маршрут</string>
    <string name="text_increase_map">Увеличить карту</string>
    <string name="text_decrease_map">Уменьшить карту</string>
    <string name="text_create_custom_route">Создать маршрут по точкам</string>
    <string name="track_route">Поехали!</string>
    <string name="text_overlay_button">История маршрутов</string>
    <string name="input_route_text_title">Введите заголовок маршрута</string>
    <string name="input_route_text_description">Введите описание маршрута</string>
</resources>